<resources>
    <string name="app_name">智慧旅游</string>

    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="internet_error">网络异常,请检查网络设置</string>
    <string name="load_error">加载失败</string>
    <string name="retry_after">请稍后重试</string>
    <string name="retry_refresh_news">点我一下 重新加载</string>
    <string name="no_more">没有更多了</string>

    <!-- 页面名称 -->
    <string name="main_navigation_home">首页</string>
    <string name="main_navigation_im">分类</string>
    <string name="main_navigation_interest">购物车</string>
    <string name="main_navigation_user">个人中心</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="second_back_hint">再按一次退出程序</string>

    <string name="money_icon">¥</string>


    <!-- App固定字符串 -->
    <string name="recommand_goods">推荐商品</string>
    <string name="all_goods">全部商品</string>
    <string name="clear_history">清除历史记录</string>
    <string name="shop">店铺</string>
    <string name="all_checked">全选</string>
    <string name="wx">微信支付</string>
    <string name="zfb">支付宝支付</string>
    <string name="way">支付方式</string>
    <string name="otherway">其他登录方式</string>
    <string name="realpay">实付</string>
    <string name="affirmpay">确认支付</string>
    <string name="hint_login">手机号/邮箱/用户名</string>
    <string name="pass_login">密码</string>
    <string name="forget_pass">忘记密码</string>
    <string name="obtain_pass">获取验证码</string>
    <string name="login">登录</string>
    <string name="finish">完成</string>
    <string name="input_phone">输入手机号</string>
    <string name="input_yzm">输入验证码</string>
    <string name="input_mm">输入密码</string>

</resources>
