<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <!--实现BaseActivity的通用顶部栏-->
    <include layout="@layout/top_title_bar" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_efefef">

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:orientation="vertical">

            <EditText
                android:id="@+id/phone_login"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_login"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1"
                android:textColorHint="@color/color_cccccc"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/color_cccccc" />

            <EditText
                android:id="@+id/code_login"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/pass_login"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="@color/color_cccccc"
                android:textSize="15sp" />
        </LinearLayout>


        <Button
            android:id="@+id/btnSure"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_below="@id/ll_login"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@color/color_fffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/btnSure"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/forget_pass"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@color/color_cccccc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/otherway"
                    android:textColor="@color/color_666666"
                    android:textSize="12sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@color/color_cccccc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/wx_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher_round" />c
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/qq_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher_round" />c
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/wb_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_launcher_round" />c
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>